src/tintin.h

/*
	Index for lists used by tintin
*/

enum lists
{
	LIST_ACTION,
	LIST_ALIAS,
	LIST_BUTTON,
	LIST_CLASS,
	LIST_COMMAND,
	LIST_CONFIG,
	LIST_DELAY,
	LIST_EVENT,
	LIST_FUNCTION,
	LIST_GAG,
	LIST_HIGHLIGHT,
	LIST_HISTORY,
	LIST_LANDMARK,
	LIST_MACRO,
	LIST_PATH,
	LIST_PATHDIR,
	LIST_PROMPT,
	LIST_SUBSTITUTE,
	LIST_TAB,
	LIST_TERRAIN,
	LIST_TICKER,
	LIST_VARIABLE,
	LIST_MAX,
};
/************************ structures *********************/

struct listroot
{
	struct listnode      ** list;
	struct session        * ses;
	int                     size;
	int                     used;
	int                     update;
	int                     multi_update;
	short                   type;
	short                   flags;
};
struct listnode
{
	struct listroot       * root; // variable
	char                  * arg1;
	char                  * arg2;
	char                  * arg3;
	char                  * arg4;
	char                  * group;
	unsigned int            shots;
	int                     flags;
	union
	{
		pcre2_code        * regex;      // act, alias, gag, highlight, substitute
		char              * data;       // class
		struct room_data  * room;       // terrain
		long long           val64;      // delay, tick, path
		short               val16[4];   // button
		int                 val32[2];   // landmark, event, pathdir
	};
};
/*
struct tableroot
{
	struct listtable     ** table;
	int                     size;
	int                     used;
};

struct tablenode
{
	struct tableroot      * root;
	char                  * arg1;
	char                  * arg2;
};
*/

struct scriptroot
{
	struct scriptnode    * next;
	struct scriptnode    * prev;
	struct session       * ses;
	struct listroot      * local;
	int                    list;
};
struct session
{
	struct session        * next;
	struct session        * prev;
	struct map_data       * map;
	struct port_data      * port;
	z_stream              * mccp2;
	z_stream              * mccp3;
	gnutls_session_t        ssl;
	struct termios          cur_terminal;
	struct log_data       * log;
	struct scroll_data    * scroll;
	struct split_data     * split;
	struct input_data     * input;
	char                  * name;
	char                  * group;
	char                  * line_capturefile;
	int                     line_captureindex;
	int                     gagline;
	struct listroot       * list[LIST_MAX];
	time_t                  created;
	int                     cur_row;
	int                     sav_row;
	int                     cur_col;
	int                     sav_col;
	int                     wrap;
	int                     fgc;
	int                     bgc;
	int                     vtc;
	int                     socket;
	int                     telopts;
	int                     telopt_flag[8];
	int                     event_flags;
        int                     config_flags;
	int                     flags;
	int                     charset;
	char                  * session_host;
	char                  * session_ip;
	char                  * session_port;
	char                  * cmd_color;
	unsigned char         * read_buf;
	int                     read_len;
	int                     read_max;
	unsigned long long      connect_retry;
	int                     connect_error;
//	char                    more_output[BUFFER_SIZE];
	char                  * more_output;
	int                     color;
	char                    color_patch[100];
	unsigned long long      packet_patch;
	unsigned long long      check_output;
	int                     scrollback_tab;
	int                     tab_width;
	unsigned long long      rand;
	unsigned short          rkey;
	struct port_data      * proxy;
};
struct port_data
{
	struct port_data      * next;
	struct port_data      * prev;
	struct port_data      * update;
	char                  * name;
	char                  * ip;
	char                  * prefix;
	char                  * color;
	char                  * group;
	int                     port;
	int                     fd;
	int                     flags;
	int                     comm_flags;
	int                     mtts_flags;
	struct msdp_data     ** msdp_data;
	char                  * proxy;
	char                  * ttype;
	char                    telbuf[BUFFER_SIZE];
	int                     teltop;
	char                    inbuf[BUFFER_SIZE];
	int                     intop;
	int                     cols;
	int                     rows;
	int                     total;
	int                     rank;
	z_stream              * mccp2;
	z_stream              * mccp3;
	struct session        * ses;
};
struct color_type
{
	char                  * name;
	char                  * code;
	int                     len;
};
struct cursor_type
{
	char                  * name;
	char                  * desc;
	char                  * code;
	int                     flags;
	CURSOR                * fun;
	char                  * arg;
};
struct daemon_type
{
	char                  * name;
	DAEMON                * fun;
	char                  * desc;
};
struct edit_type
{
	char                  * name;
	EDIT                  * fun;
	char                  * desc;
};
struct event_type
{
	char                  * name;
	int                     level;
	int                     flags;
	char                  * group;
	char                  * desc;
};
struct history_type
{
	char                  * name;
	HISTORY               * fun;
	char                  * desc;
};
struct list_type
{
	char                  * name;
	char                  * name_multi;
	int                     mode;
	int                     args;
	int                     script_arg;
	int                     priority_arg;
	int                     flags;
};
struct map_type
{
	char                  * name;
	MAP                   * fun;
	int                     flags;
	int                     check;
	char                  * desc;
};
struct map_legend_type
{
	char                  * name;
	char                  * group;
	char                  * min;
	char                  * max;
};
struct map_legend_group_type
{
	char                  * name;
	char                  * group;
	int                     min_row;
	int                     min_col;
	int                     max_row;
	int                     max_col;
	int                     start;
	int                     end;
	char                  * reset;
};
struct path_type
{
	char                  * name;
	PATH                  * fun;
	char                  * desc;
};
struct port_type
{
	char                  * name;
	PORT                  * fun;
	int                     lval;
	int                     rval;
	char                  * desc;
};
struct rank_type
{
	char                  * name;
	int                     flags;
};
struct stamp_type
{
	char                  * name;
	int                     length;
	char                  * desc;
};
struct substitution_type
{
	char                  * name;
	int                     bitvector;
};
struct timer_type
{
	char                  * name;
};
struct telopt_type
{
	char                  * name;
	int                     want;
	int                     flags;
};
extern struct color_type color_table[];
extern struct color_type map_color_table[];
//extern struct config_type config_table[];
extern struct cursor_type cursor_table[];
extern struct daemon_type daemon_table[];
extern struct edit_type edit_table[];
extern struct event_type event_table[];
extern struct history_type history_table[];
extern struct list_type list_table[LIST_MAX];
extern struct map_type map_table[];
extern struct path_type path_table[];
extern struct port_type port_table[];
extern struct rank_type rank_table[];
extern struct stamp_type huge_stamp_table[];
extern struct substitution_type substitution_table[];
extern struct telopt_type telopt_table[];
extern   char *telcmds[];
extern struct timer_type timer_table[];
extern struct map_legend_type map_legend_table[];
extern struct map_legend_group_type map_legend_group_table[];
extern void test_gmcp(struct session *ses, char *buf);
extern int get_mtts_val(struct session *ses);
extern  int client_translate_telopts(struct session *ses, unsigned char *src, int cplen);
extern  int client_write_compressed(struct session *ses, char *txt, int length);
extern  int client_send_sb_naws(struct session *ses, int cplen, unsigned char *cpsrc);
extern void announce_support(struct session *ses, struct port_data *buddy);
extern  int server_translate_telopts(struct session *ses, struct port_data *buddy, unsigned char *src, int srclen, unsigned char *out, int outlen);
extern void write_mccp2(struct session *ses, struct port_data *buddy, char *txt, int length);
extern void client_end_mccp2(struct session *ses);
extern void end_mccp2(struct session *ses, struct port_data *buddy);
extern void client_end_mccp3(struct session *ses);
extern void end_mccp3(struct session *ses, struct port_data *buddy);
extern void  init_terminal(struct session *ses);
extern void  reset_terminal(struct session *ses);
extern void  save_session_terminal(struct session *ses);
extern void  refresh_session_terminal(struct session *ses);
extern void  echo_on(struct session *ses);
extern void  echo_off(struct session *ses);
extern void  init_terminal_size(struct session *ses);
extern void  init_resize(struct session *ses, int rows, int cols, int height, int width);
extern  int  get_scroll_rows(struct session *ses);
extern  int  get_scroll_cols(struct session *ses);
extern char *get_charset(struct session *ses);
extern void print_line(struct session *ses, char **str, int isaprompt);
extern void print_stdout(int row, int col, char *format, ...);
extern  int word_wrap(struct session *ses, char *textin, char *textout, int display, int *height, int *width);
extern  int word_wrap_split(struct session *ses, char *textin, char *textout, int wrap, int start, int end, int flags, int *height, int *width);
extern int substitute(struct session *ses, char *string, char *result, int flags);
extern int match(struct session *ses, char *str, char *exp, int flags);
extern int find(struct session *ses, char *str, char *exp, int sub, int flag);
extern int regexp_compare(struct session *ses, pcre2_code *regex, char *str, char *exp, int option, int flag);
extern int check_one_regexp(struct session *ses, struct listnode *node, char *line, char *original, int option);
extern int tintin_regexp_check(struct session *ses, char *exp);
extern int tintin_regexp(struct session *ses, pcre2_code *pcre, char *str, char *exp, int option, int flag);
extern pcre2_code *regexp_compile(struct session *ses, char *exp, int option);
extern pcre2_code *tintin_regexp_compile(struct session *ses, struct listnode *node, char *exp, int option);
extern void  tintin_macro_compile(char *input, char *output);
extern void init_local(struct session *ses);
extern struct scriptroot *push_script_stack(struct session *ses, int list);
extern void pop_script_stack();
extern struct listroot *local_list(struct session *ses);
extern struct session *script_driver(struct session *ses, int list, struct listnode *node, char *str);
extern char *view_script(struct session *ses, struct scriptroot *root);
extern char *script_writer(struct session *ses, char *str);
extern char *script_viewer(struct session *ses, char *str);
extern void check_all_actions(struct session *ses, char *original, char *line, char *buf);
extern void check_all_actions_multi(struct session *ses, char *original, char *line, char *buf);
extern struct listnode *check_all_aliases(struct session *ses, char *input);
extern void check_all_buttons(struct session *ses, short row, short col, char *arg1, char *arg2, char *word, char *line);
extern void check_all_gags(struct session *ses, char *original, char *line);
extern void check_all_highlights(struct session *ses, char *original, char *line);
extern  int check_all_prompts(struct session *ses, char *original, char *line);
extern void check_all_substitutions(struct session *ses, char *original, char *line);
extern void check_all_substitutions_multi(struct session *ses, char *original, char *line);
// update.c

extern void mainloop(void);
extern void init_cpu(void);
extern void show_cpu(struct session *ses);
extern int is_number(char *str);