src/math.zig

pub const color_table: [*c]struct_color_type = @extern([*c]struct_color_type, .{
    .name = "color_table",
});
pub const map_color_table: [*c]struct_color_type = @extern([*c]struct_color_type, .{
    .name = "map_color_table",
});
pub const cursor_table: [*c]struct_cursor_type = @extern([*c]struct_cursor_type, .{
    .name = "cursor_table",
});
pub const daemon_table: [*c]struct_daemon_type = @extern([*c]struct_daemon_type, .{
    .name = "daemon_table",
});
pub const edit_table: [*c]struct_edit_type = @extern([*c]struct_edit_type, .{
    .name = "edit_table",
});
pub const event_table: [*c]struct_event_type = @extern([*c]struct_event_type, .{
    .name = "event_table",
});
pub const history_table: [*c]struct_history_type = @extern([*c]struct_history_type, .{
    .name = "history_table",
});
pub extern var list_table: [22]struct_list_type;
pub const map_table: [*c]struct_map_type = @extern([*c]struct_map_type, .{
    .name = "map_table",
});
pub const path_table: [*c]struct_path_type = @extern([*c]struct_path_type, .{
    .name = "path_table",
});
pub const port_table: [*c]struct_port_type = @extern([*c]struct_port_type, .{
    .name = "port_table",
});
pub const rank_table: [*c]struct_rank_type = @extern([*c]struct_rank_type, .{
    .name = "rank_table",
});
pub const huge_stamp_table: [*c]struct_stamp_type = @extern([*c]struct_stamp_type, .{
    .name = "huge_stamp_table",
});
pub const substitution_table: [*c]struct_substitution_type = @extern([*c]struct_substitution_type, .{
    .name = "substitution_table",
});
pub const telopt_table: [*c]struct_telopt_type = @extern([*c]struct_telopt_type, .{
    .name = "telopt_table",
});
pub const telcmds: [*c][*c]u8 = @extern([*c][*c]u8, .{
    .name = "telcmds",
});
pub const timer_table: [*c]struct_timer_type = @extern([*c]struct_timer_type, .{
    .name = "timer_table",
});
pub const map_legend_table: [*c]struct_map_legend_type = @extern([*c]struct_map_legend_type, .{
    .name = "map_legend_table",
});
pub const map_legend_group_table: [*c]struct_map_legend_group_type = @extern([*c]struct_map_legend_group_type, .{
    .name = "map_legend_group_table",
});
pub extern fn test_gmcp(ses: [*c]struct_session, buf: [*c]u8) void;
pub extern fn get_mtts_val(ses: [*c]struct_session) c_int;
pub extern fn client_translate_telopts(ses: [*c]struct_session, src: [*c]u8, cplen: c_int) c_int;
pub extern fn client_write_compressed(ses: [*c]struct_session, txt: [*c]u8, length: c_int) c_int;
pub extern fn client_send_sb_naws(ses: [*c]struct_session, cplen: c_int, cpsrc: [*c]u8) c_int;
pub extern fn announce_support(ses: [*c]struct_session, buddy: [*c]struct_port_data) void;
pub extern fn server_translate_telopts(ses: [*c]struct_session, buddy: [*c]struct_port_data, src: [*c]u8, srclen: c_int, out: [*c]u8, outlen: c_int) c_int;
pub extern fn write_mccp2(ses: [*c]struct_session, buddy: [*c]struct_port_data, txt: [*c]u8, length: c_int) void;
pub extern fn client_end_mccp2(ses: [*c]struct_session) void;
pub extern fn end_mccp2(ses: [*c]struct_session, buddy: [*c]struct_port_data) void;
pub extern fn client_end_mccp3(ses: [*c]struct_session) void;
pub extern fn end_mccp3(ses: [*c]struct_session, buddy: [*c]struct_port_data) void;
pub extern fn init_terminal(ses: [*c]struct_session) void;
pub extern fn reset_terminal(ses: [*c]struct_session) void;
pub extern fn save_session_terminal(ses: [*c]struct_session) void;
pub extern fn refresh_session_terminal(ses: [*c]struct_session) void;
pub extern fn echo_on(ses: [*c]struct_session) void;
pub extern fn echo_off(ses: [*c]struct_session) void;
pub extern fn init_terminal_size(ses: [*c]struct_session) void;
pub extern fn init_resize(ses: [*c]struct_session, rows: c_int, cols: c_int, height: c_int, width: c_int) void;
pub extern fn get_scroll_rows(ses: [*c]struct_session) c_int;
pub extern fn get_scroll_cols(ses: [*c]struct_session) c_int;
pub extern fn get_charset(ses: [*c]struct_session) [*c]u8;
pub extern fn print_line(ses: [*c]struct_session, str: [*c][*c]u8, isaprompt: c_int) void;
pub extern fn print_stdout(row: c_int, col: c_int, format: [*c]u8, ...) void;
pub extern fn word_wrap(ses: [*c]struct_session, textin: [*c]u8, textout: [*c]u8, display: c_int, height: [*c]c_int, width: [*c]c_int) c_int;
pub extern fn word_wrap_split(ses: [*c]struct_session, textin: [*c]u8, textout: [*c]u8, wrap: c_int, start: c_int, end: c_int, flags: c_int, height: [*c]c_int, width: [*c]c_int) c_int;
pub extern fn do_regexp(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn substitute(ses: [*c]struct_session, string: [*c]u8, result: [*c]u8, flags: c_int) c_int;
pub extern fn match(ses: [*c]struct_session, str: [*c]u8, exp: [*c]u8, flags: c_int) c_int;
pub extern fn find(ses: [*c]struct_session, str: [*c]u8, exp: [*c]u8, sub: c_int, flag: c_int) c_int;
pub extern fn regexp_compare(ses: [*c]struct_session, regex: ?*pcre, str: [*c]u8, exp: [*c]u8, option: c_int, flag: c_int) c_int;
pub extern fn check_one_regexp(ses: [*c]struct_session, node: [*c]struct_listnode, line: [*c]u8, original: [*c]u8, option: c_int) c_int;
pub extern fn tintin_regexp_check(ses: [*c]struct_session, exp: [*c]u8) c_int;
pub extern fn tintin_regexp(ses: [*c]struct_session, pcre: ?*pcre, str: [*c]u8, exp: [*c]u8, option: c_int, flag: c_int) c_int;
pub extern fn regexp_compile(ses: [*c]struct_session, exp: [*c]u8, option: c_int) ?*pcre;
pub extern fn tintin_regexp_compile(ses: [*c]struct_session, node: [*c]struct_listnode, exp: [*c]u8, option: c_int) ?*pcre;
pub extern fn tintin_macro_compile(input: [*c]u8, output: [*c]u8) void;
pub extern fn init_local(ses: [*c]struct_session) void;
pub extern fn push_script_stack(ses: [*c]struct_session, list: c_int) [*c]struct_scriptroot;
pub extern fn pop_script_stack(...) void;
pub extern fn local_list(ses: [*c]struct_session) [*c]struct_listroot;
pub extern fn script_driver(ses: [*c]struct_session, list: c_int, node: [*c]struct_listnode, str: [*c]u8) [*c]struct_session;
pub extern fn view_script(ses: [*c]struct_session, root: [*c]struct_scriptroot) [*c]u8;
pub extern fn script_writer(ses: [*c]struct_session, str: [*c]u8) [*c]u8;
pub extern fn script_viewer(ses: [*c]struct_session, str: [*c]u8) [*c]u8;
pub extern fn do_delay(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn do_function(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn check_all_actions(ses: [*c]struct_session, original: [*c]u8, line: [*c]u8, buf: [*c]u8) void;
pub extern fn check_all_actions_multi(ses: [*c]struct_session, original: [*c]u8, line: [*c]u8, buf: [*c]u8) void;
pub extern fn check_all_aliases(ses: [*c]struct_session, input: [*c]u8) [*c]struct_listnode;
pub extern fn check_all_buttons(ses: [*c]struct_session, row: c_short, col: c_short, arg1: [*c]u8, arg2: [*c]u8, word: [*c]u8, line: [*c]u8) void;
pub extern fn check_all_gags(ses: [*c]struct_session, original: [*c]u8, line: [*c]u8) void;
pub extern fn check_all_highlights(ses: [*c]struct_session, original: [*c]u8, line: [*c]u8) void;
pub extern fn check_all_prompts(ses: [*c]struct_session, original: [*c]u8, line: [*c]u8) c_int;
pub extern fn check_all_substitutions(ses: [*c]struct_session, original: [*c]u8, line: [*c]u8) void;
pub extern fn check_all_substitutions_multi(ses: [*c]struct_session, original: [*c]u8, line: [*c]u8) void;
pub extern fn mainloop() void;
pub extern fn init_cpu() void;
pub extern fn show_cpu(ses: [*c]struct_session) void;
pub export fn is_number(arg_str: [*c]u8) c_int {
    if (arg_str == null or arg_str[0] == 0) return 0;
    
    const str = std.mem.span(arg_str);
    var valid: c_int = 0;
    var d: c_int = 0;
    var i: c_int = 1;

    var idx: usize = str.len;
    while (idx > 0) {
        idx -= 1;
        const char = str[idx];
        
        switch (char) {
            '0'...'9' => {
                valid = 1;
            },
            '.' => {
                if (d != 0) return 0;
                d = 1;
                valid = 0;
            },
            ':' => {
                if (i == 4) return 0;
                i += 1;
                valid = 0;
            },
            '!', '~', '+', '-' => {
                if (idx != 0) return 0;
            },
            else => return 0,
        }
    }
    return valid;
}
